# fasthtml-cookbook

./: README.MD  colab.py  cookbook.ipynb  pyproject.toml  styles.css  ui.py
recipes/0001-adding-things-in-fasthtml/: app.py
recipes/0002-tailwind-css-in-fasthtml/: pico.py  tw.py
recipes/003-rendering-suff/: app.py
